--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,6 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
+    <color name="white">#FFFFFF</color>
+    <color name="ghost_white">#F8F8FF</color>
+    <color name="black">#000000</color>
+    <color name="purple">#422C42</color>
+    <color name="pinkpurple">#9574A5</color>
+    <color name="light">#E5D3E8</color>
+    <color name="dark">#231E23</color>
+    <color name="blue">#33AFFF</color>
 </resources>
