--- a/app/src/main/res/layout-land/login.xml
+++ b/app/src/main/res/layout-land/login.xml
@@ -12,12 +12,12 @@
         android:id="@+id/emailInput"
         android:layout_width="366dp"
         android:layout_height="41dp"
-        android:layout_marginTop="50dp"
+        android:layout_marginTop="96dp"
+        android:layout_marginEnd="88dp"
+        android:layout_marginRight="88dp"
         android:hint="@string/prompt_email"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.481"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/moodvieLogo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Switch
         android:id="@+id/rememberMeSwitch"
@@ -28,18 +28,20 @@
         android:text="@string/login_remember"
         app:layout_constraintBottom_toTopOf="@+id/loginButton"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
+        app:layout_constraintHorizontal_bias="0.885"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailInput2"
         app:layout_constraintVertical_bias="0.0" />
+
 
     <Button
         android:id="@+id/loginButton"
         android:layout_width="369dp"
         android:layout_height="63dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginTop="52dp"
         android:text="@string/login_header"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.788"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailInput2" />
 
@@ -47,28 +49,28 @@
         android:id="@+id/emailInput2"
         android:layout_width="366dp"
         android:layout_height="42dp"
-        android:layout_marginTop="24dp"
+        android:layout_marginTop="16dp"
         android:hint="@string/prompt_password"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.789"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailInput" />
 
-
     <ImageView
         android:id="@+id/moodvieLogo"
-        android:layout_width="match_parent"
-        android:layout_height="143dp"
-        android:layout_marginTop="48dp"
+        android:layout_width="376dp"
+        android:layout_height="146dp"
+        android:layout_marginBottom="124dp"
         android:contentDescription="@string/image_description"
         android:src="@drawable/ic_launcher_background"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:layout_editor_absoluteX="0dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/emailInput2" />
 
     <LinearLayout
         android:layout_width="251dp"
         android:layout_height="27dp"
-        android:layout_marginStart="80dp"
-        android:layout_marginLeft="80dp"
+        android:layout_marginStart="404dp"
+        android:layout_marginLeft="404dp"
         android:layout_marginBottom="16dp"
         android:orientation="horizontal"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -90,7 +92,7 @@
             android:id="@+id/createAnAccount"
             android:layout_width="115dp"
             android:layout_height="17dp"
-            android:layout_marginBottom="428dp"
+            android:layout_marginBottom="24dp"
             android:text="@string/login_create_account"
             android:textColor="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
