--- a/app/src/main/res/layout-land/create_account.xml
+++ b/app/src/main/res/layout-land/create_account.xml
@@ -55,7 +55,7 @@
         app:layout_constraintTop_toBottomOf="@+id/emailInput2" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/takePictureButton"
         android:layout_width="329dp"
         android:layout_height="59dp"
         android:layout_marginTop="40dp"
