--- a/app/src/main/res/layout/face_scan.xml
+++ b/app/src/main/res/layout/face_scan.xml
@@ -10,23 +10,45 @@
 
     <Button
         android:id="@+id/takePicture"
-        android:layout_width="369dp"
-        android:layout_height="63dp"
-        android:layout_marginBottom="16dp"
+        android:layout_width="260dp"
+        android:layout_height="69dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="124dp"
         android:text="@string/take_picture_button"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/camera" />
 
 
     <ImageView
         android:id="@+id/camera"
-        android:layout_width="419dp"
-        android:layout_height="604dp"
-        android:layout_marginTop="48dp"
+        android:layout_width="414dp"
+        android:layout_height="522dp"
         android:contentDescription="@string/image_description"
         android:src="@drawable/ic_launcher_background"
+        android:visibility="invisible"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/use_image"
+        android:layout_width="108dp"
+        android:layout_height="67dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginLeft="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginRight="8dp"
+        android:layout_marginBottom="8dp"
+        android:text="@string/use_this"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/takePicture" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
