--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -5,39 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/light"
-    tools:context=".create_account">
+    tools:context=".CreateAccount">
 
     <ImageView
         android:id="@+id/moodvieLogo"
-        android:layout_width="376dp"
-        android:layout_height="146dp"
-        android:layout_marginTop="120dp"
-        android:contentDescription="@string/image_description"
+        android:layout_width="match_parent"
+        android:layout_height="143dp"
+        android:layout_marginTop="36dp"
         android:src="@drawable/ic_launcher_background"
-        app:layout_constraintEnd_toStartOf="@+id/emailInput2"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        android:contentDescription="@string/image_description"
+        />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/nameInput"
         android:layout_width="366dp"
         android:layout_height="41dp"
-        android:layout_marginTop="120dp"
-        android:layout_marginEnd="116dp"
-        android:layout_marginRight="116dp"
+        android:layout_marginTop="52dp"
         android:hint="@string/prompt_name"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/moodvieLogo" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/emailInput2"
         android:layout_width="366dp"
         android:layout_height="42dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="@string/prompt_email"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.739"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/nameInput" />
 
@@ -45,12 +45,11 @@
         android:id="@+id/password"
         android:layout_width="366dp"
         android:layout_height="42dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="24dp"
         android:ems="10"
         android:hint="@string/prompt_password"
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.739"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/emailInput2" />
 
@@ -58,10 +57,9 @@
         android:id="@+id/takePictureButton"
         android:layout_width="329dp"
         android:layout_height="59dp"
-        android:layout_marginTop="40dp"
-        android:layout_marginEnd="128dp"
-        android:layout_marginRight="128dp"
+        android:layout_marginBottom="36dp"
         android:text="@string/create_account_button"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
