--- a/app/src/main/res/layout/activity_open_camera.xml
+++ b/app/src/main/res/layout/activity_open_camera.xml
@@ -4,6 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".open_camera">
+    tools:context=".OpenCamera">
 
 </androidx.constraintlayout.widget.ConstraintLayout>
