--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -20,7 +20,7 @@
         />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/nameInput"
+        android:id="@+id/userNameInput"
         android:layout_width="366dp"
         android:layout_height="41dp"
         android:layout_marginTop="52dp"
@@ -35,11 +35,11 @@
         android:layout_height="42dp"
         android:layout_marginTop="24dp"
         android:ems="10"
-        android:hint="@string/prompt_email"
+        android:hint="@string/prompt_username"
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/nameInput" />
+        app:layout_constraintTop_toBottomOf="@+id/userNameInput" />
 
     <com.google.android.material.textfield.TextInputEditText
         android:id="@+id/password"
@@ -54,7 +54,7 @@
         app:layout_constraintTop_toBottomOf="@+id/emailInput2" />
 
     <Button
-        android:id="@+id/takePictureButton"
+        android:id="@+id/createAccountButton"
         android:layout_width="329dp"
         android:layout_height="59dp"
         android:layout_marginBottom="36dp"
