--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -9,11 +9,11 @@
 
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/emailInput"
+        android:id="@+id/usernameInput"
         android:layout_width="366dp"
         android:layout_height="41dp"
         android:layout_marginTop="50dp"
-        android:hint="@string/prompt_email"
+        android:hint="@string/prompt_username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.481"
         app:layout_constraintStart_toStartOf="parent"
@@ -30,7 +30,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailInput2"
+        app:layout_constraintTop_toBottomOf="@+id/passwordInput"
         app:layout_constraintVertical_bias="0.0" />
 
     <Button
@@ -41,17 +41,17 @@
         android:text="@string/login_header"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailInput2" />
+        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/emailInput2"
+        android:id="@+id/passwordInput"
         android:layout_width="366dp"
         android:layout_height="42dp"
         android:layout_marginTop="24dp"
         android:hint="@string/prompt_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailInput" />
+        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />
 
 
     <ImageView
