--- a/app/src/main/res/layout-land/activity_login.xml
+++ b/app/src/main/res/layout-land/activity_login.xml
@@ -9,7 +9,7 @@
 
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/usernameInput"
+        android:id="@+id/LoginScreen_username"
         android:layout_width="366dp"
         android:layout_height="41dp"
         android:layout_marginTop="96dp"
@@ -20,22 +20,22 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <Switch
-        android:id="@+id/rememberMeSwitch"
+        android:id="@+id/LoginScreen_rememberSwitch"
         android:layout_width="142dp"
         android:layout_height="45dp"
         android:layout_marginEnd="16dp"
         android:layout_marginRight="16dp"
         android:text="@string/login_remember"
-        app:layout_constraintBottom_toTopOf="@+id/loginButton"
+        app:layout_constraintBottom_toTopOf="@+id/LoginScreen_loginButton"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.885"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameInput"
+        app:layout_constraintTop_toBottomOf="@+id/LoginScreen_username"
         app:layout_constraintVertical_bias="0.0" />
 
 
     <Button
-        android:id="@+id/loginButton"
+        android:id="@+id/LoginScreen_loginButton"
         android:layout_width="369dp"
         android:layout_height="63dp"
         android:layout_marginTop="52dp"
@@ -43,10 +43,10 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.788"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />
+        app:layout_constraintTop_toBottomOf="@+id/LoginScreen_username" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/emailInput2"
+        android:id="@+id/LoginScreen_password"
         android:layout_width="366dp"
         android:layout_height="42dp"
         android:layout_marginTop="16dp"
@@ -54,7 +54,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.789"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/usernameInput" />
+        app:layout_constraintTop_toBottomOf="@+id/LoginScreen_username" />
 
     <ImageView
         android:id="@+id/moodvieLogo"
@@ -64,7 +64,7 @@
         android:contentDescription="@string/image_description"
         android:src="@drawable/ic_launcher_background"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toStartOf="@+id/usernameInput" />
+        app:layout_constraintEnd_toStartOf="@+id/LoginScreen_username" />
 
     <LinearLayout
         android:layout_width="251dp"
@@ -77,7 +77,7 @@
         app:layout_constraintStart_toStartOf="parent">
 
         <TextView
-            android:id="@+id/noAccountString"
+            android:id="@+id/LoginScreen_noAccountString"
             android:layout_width="145dp"
             android:layout_height="20dp"
             android:layout_marginBottom="428dp"
@@ -89,14 +89,14 @@
             app:layout_constraintStart_toStartOf="parent" />
 
         <TextView
-            android:id="@+id/createAnAccount"
+            android:id="@+id/LoginScreen_createAnAccount"
             android:layout_width="115dp"
             android:layout_height="17dp"
             android:layout_marginBottom="24dp"
             android:text="@string/login_create_account"
             android:textColor="@color/blue"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintStart_toEndOf="@+id/noAccountString" />
+            app:layout_constraintStart_toEndOf="@+id/LoginScreen_noAccountString" />
 
 
     </LinearLayout>
