--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -20,7 +20,7 @@
         />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/userNameInput"
+        android:id="@+id/createAccount_name"
         android:layout_width="366dp"
         android:layout_height="41dp"
         android:layout_marginTop="52dp"
@@ -30,7 +30,7 @@
         app:layout_constraintTop_toBottomOf="@+id/moodvieLogo" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/emailInput2"
+        android:id="@+id/createAccount_username"
         android:layout_width="366dp"
         android:layout_height="42dp"
         android:layout_marginTop="24dp"
@@ -39,10 +39,10 @@
         android:inputType="textEmailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/userNameInput" />
+        app:layout_constraintTop_toBottomOf="@+id/createAccount_name" />
 
     <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/password"
+        android:id="@+id/createAccount_password"
         android:layout_width="366dp"
         android:layout_height="42dp"
         android:layout_marginTop="24dp"
@@ -51,10 +51,10 @@
         android:inputType="textPassword"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/emailInput2" />
+        app:layout_constraintTop_toBottomOf="@+id/createAccount_username" />
 
     <Button
-        android:id="@+id/createAccountButton"
+        android:id="@+id/createAccount_createButton"
         android:layout_width="329dp"
         android:layout_height="59dp"
         android:layout_marginBottom="36dp"
