--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -21,26 +21,27 @@
                 android:id="@+id/etSearchMovie"
                 android:layout_width="212dp"
                 android:layout_height="46dp"
-                android:layout_marginLeft="50dp"
+                android:layout_marginLeft="52dp"
                 android:background="@color/white"
                 android:ems="10"
-                android:hint="Search for Movie"
+                android:hint="@string/search_for_movie"
                 android:inputType="textPersonName"
                 android:textAlignment="center"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/settingButton" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <Button
                 android:id="@+id/scanButton"
                 android:layout_width="158dp"
                 android:layout_height="48dp"
-                android:text="Scan Movie"
+                android:text="@string/scan_movie"
                 android:background="@color/pinkpurple"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintRight_toLeftOf="@id/faceButton"
                 app:layout_constraintTop_toBottomOf="@id/etSearchMovie"
                 android:layout_marginTop="15dp"
                 android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 tools:layout_editor_absoluteX="26dp"
                 tools:layout_editor_absoluteY="120dp" />
 
@@ -48,18 +49,19 @@
                 android:id="@+id/faceButton"
                 android:layout_width="158dp"
                 android:layout_height="48dp"
-                android:text="Face Scan"
+                android:text="@string/face_scan"
                 android:background="@color/pinkpurple"
                 app:layout_constraintRight_toRightOf="parent"
                 app:layout_constraintLeft_toRightOf="@id/scanButton"
                 app:layout_constraintTop_toBottomOf="@id/etSearchMovie"
                 android:layout_marginTop="15dp"
                 android:layout_marginRight="20dp"
+                android:layout_marginLeft="20dp"
                 tools:layout_editor_absoluteX="224dp"
                 tools:layout_editor_absoluteY="120dp" />
 
             <ImageButton
-                android:id="@+id/settingButton"
+                android:id="@+id/HomeScreen_settingButton"
                 android:layout_width="46dp"
                 android:layout_height="42dp"
                 android:background="@color/pinkpurple"
@@ -80,10 +82,10 @@
                 android:id="@+id/searchButton"
                 android:layout_width="61dp"
                 android:layout_height="47dp"
-                android:layout_marginLeft="10dp"
+                android:layout_marginLeft="4dp"
                 android:background="@color/pinkpurple"
                 app:layout_constraintLeft_toRightOf="@+id/etSearchMovie"
-                app:layout_constraintTop_toBottomOf="@id/settingButton"
+                app:layout_constraintTop_toTopOf="parent"
                 app:srcCompat="@android:drawable/ic_search_category_default" />
 
             <ImageView
@@ -116,6 +118,7 @@
                 app:layout_constraintLeft_toRightOf="@id/image1"
                 android:layout_marginTop="23dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
                 tools:layout_editor_absoluteX="230dp"
                 tools:layout_editor_absoluteY="174dp"
                 android:src="@drawable/ic_launcher_background" />
@@ -126,6 +129,7 @@
                 android:layout_height="185dp"
                 android:layout_marginTop="100dp"
                 android:layout_marginRight="10dp"
+                android:layout_marginLeft="10dp"
                 app:layout_constraintTop_toBottomOf="@id/image2"
                 app:layout_constraintLeft_toRightOf="@id/image3"
                 tools:layout_editor_absoluteX="230dp"
