--- a/app/src/main/res/layout-land/activity_create_account.xml
+++ b/app/src/main/res/layout-land/activity_create_account.xml
@@ -13,7 +13,7 @@
         android:layout_height="146dp"
         android:layout_marginTop="120dp"
         android:contentDescription="@string/image_description"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@mipmap/moodvie"
         app:layout_constraintEnd_toStartOf="@+id/createAccount_username"
         app:layout_constraintTop_toTopOf="parent" />
 
