--- a/app/src/main/res/layout/activity_create_account.xml
+++ b/app/src/main/res/layout/activity_create_account.xml
@@ -12,7 +12,7 @@
         android:layout_width="match_parent"
         android:layout_height="143dp"
         android:layout_marginTop="36dp"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@mipmap/moodvie"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
