--- a/app/src/main/res/layout/activity_splash_screen.xml
+++ b/app/src/main/res/layout/activity_splash_screen.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/dark"
+    android:background="@color/black"
     tools:context=".SplashScreen">
 
     <ImageView
@@ -13,7 +13,7 @@
         android:layout_height="143dp"
         android:layout_marginTop="244dp"
         android:contentDescription="@string/image_description"
-        android:src="@drawable/ic_launcher_background"
+        android:src="@mipmap/moodvie"
         app:layout_constraintTop_toTopOf="parent"
         tools:layout_editor_absoluteX="0dp" />
 
