- Added functionality to the barcode scanner   - The name of the movie scanned is fetched using Upcitemdb API   - TMDB API used to get movie information from the Upcitemdb response

--- a/app/src/main/res/layout/activity_face_scan.xml
+++ b/app/src/main/res/layout/activity_face_scan.xml
@@ -55,6 +55,6 @@
         android:layout_height="495dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/face_smile" />
+        app:srcCompat="@drawable/ic_launcher_background" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
