--- a/app/src/main/res/layout/movie_page.xml
+++ b/app/src/main/res/layout/movie_page.xml
@@ -5,47 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/purple"
-    tools:context=".moviePage">
-
-    <ImageButton
-        android:id="@+id/btnStar5"
-        style="@android:style/Widget.Holo.ImageButton"
-        android:layout_width="48dp"
-        android:layout_height="52dp"
-        android:background="@color/purple"
-        android:src="@android:drawable/btn_star_big_off"
-        tools:layout_editor_absoluteX="207dp"
-        tools:layout_editor_absoluteY="382dp" />
-
-    <ImageButton
-        android:id="@+id/btnStar1"
-        style="@android:style/Widget.Holo.ImageButton"
-        android:layout_width="48dp"
-        android:layout_height="52dp"
-        android:background="@color/purple"
-        android:src="@android:drawable/btn_star_big_off"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="382dp" />
-
-    <ImageButton
-        android:id="@+id/btmStar3"
-        style="@android:style/Widget.Holo.ImageButton"
-        android:layout_width="48dp"
-        android:layout_height="52dp"
-        android:background="@color/purple"
-        android:src="@android:drawable/btn_star_big_off"
-        tools:layout_editor_absoluteX="112dp"
-        tools:layout_editor_absoluteY="382dp" />
-
-    <ImageButton
-        android:id="@+id/btnStar4"
-        style="@android:style/Widget.Holo.ImageButton"
-        android:layout_width="48dp"
-        android:layout_height="52dp"
-        android:background="@color/purple"
-        android:src="@android:drawable/btn_star_big_off"
-        tools:layout_editor_absoluteX="160dp"
-        tools:layout_editor_absoluteY="382dp" />
+    tools:context=".MoviePage">
 
     <TextView
         android:id="@+id/tvLogo"
@@ -55,17 +15,20 @@
         android:textAppearance="@android:style/TextAppearance.Material.Medium"
         android:textColor="@color/pinkpurple"
         android:textSize="36sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp" />
 
     <TextView
         android:id="@+id/tvMovieTitle"
         android:layout_width="239dp"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
         android:text="Movie Title (201X)"
         android:textColor="@color/light"
         android:textSize="24sp"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="350dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ivMovePoster" />
 
     <ImageButton
         android:id="@+id/btnAddMovie"
@@ -75,76 +38,82 @@
         android:background="@color/purple"
         android:scaleType="fitXY"
         android:src="@android:drawable/ic_input_add"
-        tools:layout_editor_absoluteX="268dp"
-        tools:layout_editor_absoluteY="350dp" />
+        app:layout_constraintStart_toEndOf="@+id/tvMovieTitle"
+        app:layout_constraintTop_toBottomOf="@+id/ivMovePoster" />
 
     <ImageView
         android:id="@+id/ivMovePoster"
         android:layout_width="match_parent"
         android:layout_height="292dp"
-        tools:layout_editor_absoluteX="0dp"
-        tools:layout_editor_absoluteY="58dp"
-        tools:src="@tools:sample/avatars[0]" />
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvLogo"
+        tools:src="@drawable/ic_launcher_background" />
 
     <ImageButton
         android:id="@+id/btnOwnMovie"
         android:layout_width="30dp"
         android:layout_height="33dp"
+        android:layout_marginTop="12dp"
         android:background="@color/purple"
         android:scaleType="fitXY"
         android:src="@android:drawable/checkbox_off_background"
-        tools:layout_editor_absoluteX="329dp"
-        tools:layout_editor_absoluteY="356dp" />
-
-    <ImageButton
-        android:id="@+id/btnStar2"
-        style="@android:style/Widget.Holo.ImageButton"
-        android:layout_width="48dp"
-        android:layout_height="52dp"
-        android:background="@color/purple"
-        android:src="@android:drawable/btn_star_big_off"
-        tools:layout_editor_absoluteX="64dp"
-        tools:layout_editor_absoluteY="382dp" />
+        app:layout_constraintStart_toEndOf="@+id/btnAddMovie"
+        app:layout_constraintTop_toBottomOf="@+id/ivMovePoster" />
 
     <TextView
         android:id="@+id/tvSynopsis"
         android:layout_width="250dp"
         android:layout_height="32dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="60dp"
         android:text="Synopsis:"
         android:textColor="@color/light"
         android:textSize="18sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="434dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/movieRatingBar" />
 
     <TextView
         android:id="@+id/tvMovieDesc"
         android:layout_width="359dp"
         android:layout_height="151dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
         android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam cursus sit amet risus et porttitor. Sed auctor fermentum enim, eget feugiat enim congue sed. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut vehicula aliquam orci non aliquet. Integer mattis nisi sit amet aliquet aliquet. Sed venenatis turpis eu orci molestie mattis. Nulla vel velit sit amet quam pulvinar tempor nec vel sapien. Vestibulum luctus venenatis quam ut ultrices. Curabitur dapibus risus ut massa consequat, sed ultrices eros aliquam."
         android:textColor="@color/light"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="460dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvSynopsis" />
 
     <TextView
         android:id="@+id/tvStarring"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="4dp"
         android:text="Starring:"
         android:textColor="@color/light"
         android:textSize="18sp"
         android:textStyle="bold"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="611dp" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvMovieDesc" />
 
     <TextView
         android:id="@+id/tvCast"
         android:layout_width="289dp"
         android:layout_height="56dp"
+        android:layout_marginBottom="16dp"
         android:text="Some Bloke, Some Other Bloke, A Lady, Token POC, Other Rando Side Actors"
         android:textColor="@color/light"
-        tools:layout_editor_absoluteX="16dp"
-        tools:layout_editor_absoluteY="635dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="@+id/tvStarring" />
+
+    <RatingBar
+        android:id="@+id/movieRatingBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvMovieTitle" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
