--- a/app/src/main/res/layout/activity_home_screen.xml
+++ b/app/src/main/res/layout/activity_home_screen.xml
@@ -70,6 +70,7 @@
                 app:srcCompat="@android:drawable/ic_menu_manage" />
 
             <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/movieRecycleView"
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
                 android:layout_marginTop="15dp"
