--- a/app/src/main/res/layout/movie_page.xml
+++ b/app/src/main/res/layout/movie_page.xml
@@ -32,7 +32,7 @@
         android:layout_marginEnd="116dp"
         android:text="@string/movie_title"
         android:textColor="@color/light"
-        android:textSize="36sp"
+        android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ivMovePoster" />
@@ -62,14 +62,14 @@
         tools:src="@drawable/ic_launcher_background" />
 
     <ImageButton
-        android:id="@+id/btnOwnMovie"
+        android:id="@+id/btnDeleteMovie"
         android:layout_width="46dp"
         android:layout_height="45dp"
         android:layout_marginEnd="156dp"
         android:layout_marginBottom="16dp"
         android:background="@color/purple"
         android:scaleType="fitXY"
-        android:src="@android:drawable/checkbox_off_background"
+        android:src="@android:drawable/ic_input_delete"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
