--- a/app/src/main/res/layout/activity_settings_page.xml
+++ b/app/src/main/res/layout/activity_settings_page.xml
@@ -9,12 +9,37 @@
 
     <Button
         android:id="@+id/SettingsPage_logout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="152dp"
-        android:layout_marginLeft="152dp"
-        android:layout_marginTop="60dp"
+        android:layout_width="281dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="76dp"
         android:text="@string/logout"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/SettingsPage_changePassword" />
+
+    <Button
+        android:id="@+id/SettingsPage_changePassword"
+        android:layout_width="281dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="76dp"
+        android:text="@string/change_password"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/SettingsPage_changeUsername" />
+
+    <Button
+        android:id="@+id/SettingsPage_changeUsername"
+        android:layout_width="281dp"
+        android:layout_height="56dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="256dp"
+        android:layout_marginEnd="76dp"
+        android:text="@string/change_username"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
