--- a/app/src/main/res/layout-land/activity_home_screen.xml
+++ b/app/src/main/res/layout-land/activity_home_screen.xml
@@ -1,140 +1,104 @@
 <?xml version="1.0" encoding="utf-8"?>
-    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
-        xmlns:tools="http://schemas.android.com/tools"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/purple"
+    tools:context=".HomeScreen">
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/purple"
-        tools:context=".HomeScreen">
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_editor_absoluteX="0dp">
+
+        <EditText
+            android:id="@+id/etSearchMovie"
+            android:layout_width="212dp"
+            android:layout_height="46dp"
+            android:layout_marginStart="250dp"
+            android:background="@color/white"
+            android:ems="10"
+            android:hint="@string/search_for_movie"
+            android:importantForAutofill="no"
+            android:inputType="textPersonName"
+            android:textAlignment="center"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/settingButton" />
+
+        <Button
+            android:id="@+id/scanButton"
+            android:layout_width="158dp"
+            android:layout_height="48dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginTop="15dp"
+            android:background="@color/pinkpurple"
+            android:text="@string/scan_movie"
+            app:layout_constraintLeft_toLeftOf="parent"
+            app:layout_constraintRight_toLeftOf="@id/faceButton"
+            app:layout_constraintTop_toBottomOf="@id/etSearchMovie"
+            tools:layout_editor_absoluteX="26dp"
+            tools:layout_editor_absoluteY="120dp" />
+
+        <Button
+            android:id="@+id/faceButton"
+            android:layout_width="158dp"
+            android:layout_height="48dp"
+            android:layout_marginTop="15dp"
+            android:layout_marginRight="20dp"
+            android:background="@color/pinkpurple"
+            android:text="@string/face_scan"
+            app:layout_constraintLeft_toRightOf="@id/scanButton"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/etSearchMovie"
+            tools:layout_editor_absoluteX="224dp"
+            tools:layout_editor_absoluteY="120dp" />
+
+        <ImageButton
+            android:id="@+id/settingButton"
+            android:layout_width="46dp"
+            android:layout_height="42dp"
+            android:background="@color/pinkpurple"
+            app:layout_constraintRight_toRightOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@android:drawable/ic_menu_manage" />
+
+        <ImageButton
+            android:id="@+id/searchButton"
+            android:layout_width="61dp"
+            android:layout_height="47dp"
+            android:layout_marginStart="10dp"
+            android:background="@color/pinkpurple"
+            app:layout_constraintLeft_toRightOf="@+id/etSearchMovie"
+            app:layout_constraintTop_toBottomOf="@id/settingButton"
+            app:srcCompat="@android:drawable/ic_search_category_default" />
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
     <ScrollView
         android:id="@+id/scrollMainPage"
-        android:layout_width="match_parent"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toTopOf="parent">
+        android:layout_width="731dp"
+        android:layout_height="247dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-            <EditText
-                android:id="@+id/etSearchMovie"
-                android:layout_width="212dp"
-                android:layout_height="46dp"
-                android:layout_marginLeft="250dp"
-                android:background="@color/white"
-                android:ems="10"
-                android:hint="Search for Movie"
-                android:inputType="textPersonName"
-                android:textAlignment="center"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/settingButton" />
+        <androidx.gridlayout.widget.GridLayout
+            android:id="@+id/gridLayout"
+            android:layout_width="404dp"
+            android:layout_height="606dp"
+            android:padding="30dp"
+            app:layout_constraintBottom_toBottomOf="@id/scanButton"
+            app:layout_constraintEnd_toEndOf="parent">
 
-            <Button
-                android:id="@+id/scanButton"
-                android:layout_width="158dp"
-                android:layout_height="48dp"
-                android:text="Scan Movie"
-                android:background="@color/pinkpurple"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintRight_toLeftOf="@id/faceButton"
-                app:layout_constraintTop_toBottomOf="@id/etSearchMovie"
-                android:layout_marginTop="15dp"
-                android:layout_marginLeft="40dp"
-                tools:layout_editor_absoluteX="26dp"
-                tools:layout_editor_absoluteY="120dp" />
-
-            <Button
-                android:id="@+id/faceButton"
-                android:layout_width="158dp"
-                android:layout_height="48dp"
-                android:text="Face Scan"
-                android:background="@color/pinkpurple"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintLeft_toRightOf="@id/scanButton"
-                app:layout_constraintTop_toBottomOf="@id/etSearchMovie"
-                android:layout_marginTop="15dp"
-                android:layout_marginRight="20dp"
-                tools:layout_editor_absoluteX="224dp"
-                tools:layout_editor_absoluteY="120dp" />
-
-            <ImageButton
-                android:id="@+id/settingButton"
-                android:layout_width="46dp"
-                android:layout_height="42dp"
-                android:background="@color/pinkpurple"
-                app:layout_constraintRight_toRightOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@android:drawable/ic_menu_manage" />
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_marginTop="15dp"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/scanButton"
-                app:layout_constraintVertical_bias="0.0"
-                tools:layout_editor_absoluteX="0dp" />
-
-            <ImageButton
-                android:id="@+id/searchButton"
-                android:layout_width="61dp"
-                android:layout_height="47dp"
-                android:layout_marginLeft="10dp"
-                android:background="@color/pinkpurple"
-                app:layout_constraintLeft_toRightOf="@+id/etSearchMovie"
-                app:layout_constraintTop_toBottomOf="@id/settingButton"
-                app:srcCompat="@android:drawable/ic_search_category_default" />
-
-            <ImageView
-                android:id="@+id/image1"
-                android:layout_width="203dp"
-                android:layout_height="185dp"
-                app:layout_constraintTop_toBottomOf="@id/scanButton"
-                app:layout_constraintLeft_toLeftOf="parent"
-                android:layout_marginTop="23dp"
-                android:layout_marginLeft="120dp"
-                tools:layout_editor_absoluteX="0dp"
-                tools:layout_editor_absoluteY="174dp"
-                android:src="@drawable/ic_launcher_background" />
-
-            <ImageView
-                android:id="@+id/image3"
-                android:layout_width="203dp"
-                android:layout_height="185dp"
-                android:layout_marginTop="100dp"
-                android:layout_marginLeft="120dp"
-                app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/image1"
-                android:src="@drawable/ic_launcher_background" />
-
-            <ImageView
-                android:id="@+id/image2"
-                android:layout_width="203dp"
-                android:layout_height="185dp"
-                app:layout_constraintTop_toBottomOf="@id/scanButton"
-                app:layout_constraintLeft_toRightOf="@id/image1"
-                android:layout_marginTop="23dp"
-                android:layout_marginLeft="100dp"
-                tools:layout_editor_absoluteX="230dp"
-                tools:layout_editor_absoluteY="174dp"
-                android:src="@drawable/ic_launcher_background" />
-
-            <ImageView
-                android:id="@+id/image4"
-                android:layout_width="203dp"
-                android:layout_height="185dp"
-                android:layout_marginTop="100dp"
-                android:layout_marginLeft="100dp"
-                app:layout_constraintTop_toBottomOf="@id/image2"
-                app:layout_constraintLeft_toRightOf="@id/image3"
-                tools:layout_editor_absoluteX="230dp"
-                tools:layout_editor_absoluteY="489dp"
-                android:src="@drawable/ic_launcher_background" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        </androidx.gridlayout.widget.GridLayout>
 
     </ScrollView>
-
-
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
